# papers

./: .gitignore  README.md  main.py  paper_downloader.py  pyproject.toml
src/papers/: __init__.py
src/papers/ed_method/: main.py
src/papers/multiresolutional_hashencoding/: model.py
src/papers/sinusoidal_frequency_estimation_by_gradient_descent/: model.py
src/papers/vision_gnn/: evaluate.py  readme.md  train_onefile.py
